--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node ./bin/server.js",
     "start:dev": "nodemon ./bin/server.js"
-
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "knex": "^2.1.0",
