--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "pg": "^8.7.3"
   },
