--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3"
   },
   "devDependencies": {
